--- a/src/componets/Header/Header.scss
+++ b/src/componets/Header/Header.scss
@@ -1,9 +1,13 @@
 @import "./toggle.scss";
 
+$text-color: #a9a9a9;
+
 #Header {
   display: flex;
+  position: fixed;
+  z-index: 100;
   justify-content: space-around;
-  background-color: black;
+  background-color: rgba($color: #000, $alpha: 0.8);
   height: 4rem;
   width: 100vw;
   font-family: "Courier New", Courier, monospace;
@@ -13,7 +17,7 @@
     align-items: center;
 
     h1 {
-      color: white;
+      color: $text-color;
       font-size: 1.5rem;
       font-weight: normal;
     }
@@ -22,17 +26,22 @@
   .tabs {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
 
-    button {
+    a {
       cursor: pointer;
       border: none;
       background-color: transparent;
-      color: white;
+      color: $text-color;
+      text-decoration: none;
 
       &:hover {
         padding-top: 5px;
         text-decoration: underline;
+      }
+      &:visited {
+        color: $text-color;
       }
     }
   }
