--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 :root {
   --bg-color-1: #000000;
   --bg-color-2: rgb(255, 255, 255);
-  --font-color-1: #bebebe;
-  --font-color-2: #5d5d5d;
+  --font-color-1: #ffffff;
+  --font-color-2: #010101;
   --main-font: "Courier New", Courier, monospace;
 }
