--- a/src/componets/About/About.scss
+++ b/src/componets/About/About.scss
@@ -2,7 +2,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 2rem;
   height: 100vh;
   background-color: var(--bg-color-2);
   color: var(--font-color-2);
+  font-family: var(--main-font);
+  line-height: 1.5;
+  width: clamp(300px, 80%, 800px);
+
+  .title {
+    font-size: clamp(2rem, 8vw, 5rem);
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+  }
+
+  .content {
+    font-size: clamp(1.2rem, 2vw, 1.5rem);
+  }
 }
