--- a/src/componets/Home/Home.scss
+++ b/src/componets/Home/Home.scss
@@ -27,7 +27,7 @@
 
     .pic {
       transition: 0.3s;
-      background-image: url(./assets/phoenix.jpg);
+      background-image: url(./assets/phoenix.jpeg);
       background-position: center;
       background-size: cover;
       height: 100%;
