--- a/src/componets/Skills/Skills.scss
+++ b/src/componets/Skills/Skills.scss
@@ -4,6 +4,29 @@
   justify-content: center;
   height: 100vh;
   background-color: var(--bg-color-1);
-
   color: var(--font-color-1);
+  gap: 2rem;
+
+  .title {
+    font-size: clamp(2rem, 6vw, 3.5rem);
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-thickness: 0.2rem;
+  }
+
+  .lang-frame,
+  .dev-tools {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: clamp(1rem, 5vw, 1.5rem);
+
+    .lang-frame-list,
+    .dev-tools-list {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 2rem;
+    }
+  }
 }
