--- a/src/componets/Skills/Icon.scss
+++ b/src/componets/Skills/Icon.scss
@@ -9,15 +9,21 @@
     transition: all 0.3s ease-in-out;
     background-color: white;
     border-radius: 1rem;
-    padding: 0.5rem;
+    padding: 1rem;
 
     &:hover {
-      transform: scale(1.1) translateY(-0.5rem);
+      transform: scale(1.1) translateY(-0.5rem) rotate(5deg);
     }
   }
 
   .icon-name {
-    font-size: clamp(1rem, 5vw, 1.5rem);
+    font-size: clamp(0.8rem, 1vw, 1.5rem);
     margin: 0.5rem 0 1rem 0;
+  }
+
+  @media screen and (max-width: 400px) {
+    .icon {
+      padding: 0.4rem;
+    }
   }
 }
