--- a/src/componets/Skills/Skills.scss
+++ b/src/componets/Skills/Skills.scss
@@ -6,6 +6,7 @@
   background-color: var(--bg-color-1);
   color: var(--font-color-1);
   gap: 2rem;
+  font-family: var(--main-font);
 
   .title {
     font-size: clamp(2rem, 6vw, 3.5rem);
@@ -27,6 +28,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       gap: 2rem;
+      font-size: 1rem;
     }
   }
 }
