--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,6 @@
   --bg-color-2: rgb(255, 255, 255);
   --font-color-1: #ffffff;
   --font-color-2: #010101;
+  --secondary-color: #a2642b;
   --main-font: "Courier New", Courier, monospace;
 }
