--- a/src/componets/Skills/Skills.scss
+++ b/src/componets/Skills/Skills.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   background-color: var(--bg-color-1);
   color: var(--font-color-1);
-  gap: 2rem;
+  gap: 1rem;
   font-family: var(--main-font);
 
   .title {
@@ -19,7 +19,7 @@
   .dev-tools {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     font-size: clamp(1rem, 5vw, 1.5rem);
 
     .lang-frame-list,
@@ -27,8 +27,15 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 2rem;
+      gap: clamp(1rem, 5vw, 2rem);
       font-size: 1rem;
     }
   }
+}
+
+.car .xxx {
+  width: 10rem;
+  height: 10rem;
+  background-color: red;
+  color: aqua;
 }
