--- a/src/componets/Header/Header.scss
+++ b/src/componets/Header/Header.scss
@@ -9,7 +9,7 @@ $text-hover: #a2642b;
     .container {
       .name {
         color: $text-color;
-        font-size: 1.5rem;
+        font-size: clamp(1.2rem, 4vw, 1.5rem);
       }
 
       .tabs {
