--- a/src/componets/Projects/ProjectInfo.scss
+++ b/src/componets/Projects/ProjectInfo.scss
@@ -13,11 +13,13 @@
   .btn-group {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
 
     & > a {
       border-radius: 1rem;
       width: clamp(5rem, 10vw, 8rem);
+      height: 2.5rem;
     }
   }
 }
