--- a/src/componets/Footer/Footer.scss
+++ b/src/componets/Footer/Footer.scss
@@ -1,10 +1,8 @@
-.footer{
+.footer {
+  position: absolute;
+  bottom: 1.5rem;
+  right: 5vw;
   display: flex;
-
-  justify-content: flex-end;
-  align-items: flex-end;
-  height: calc(100% - 3rem);
-  top: clamp(18rem, 10vw, 25rem);
   gap: clamp(1rem, 3vw, 2rem);
 
   & > a {
