--- a/src/componets/Home/Home.scss
+++ b/src/componets/Home/Home.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   height: 100vh;
   background-color: var(--bg-color-1);
-  z-index: 2;
+  position: relative;
 
   .info {
     position: absolute;
